New config builders (#7008)
* Plugin version updates
* Builder API changes and associated changes to common project
* Pico changes (config driven, new builder APIs)
* Config changes (new builder API, metadadata updates)
* Changes required after changes to common modules and builders
* Nima changes
* BOM POM
* Tests update
* Examples
* Integration test fixes (and related fixes in production code).
* Make sure we do not require transitive dependency on Config for Builder.
* Archetype fix